# wildbook-ia

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  README.rst  RUN_IBEIS.sh  SECURITY.rst  TODO.md  _devcmds_ibeis.py  _devscript.py  _run_tests2.sh  all_import.py  assert_modules.sh  autogen_docs.sh  autogen_test_script.py  build_documentation.sh  clean.sh  conda_requires.py  conftest.py  dbgimport2.py  demo.py  dev.py  dev_port.py  docker-compose.yml  experiments.sh  fix_common_issues.py  genindex.html  healthcheck.py  ibeis.control.html  ibeis.dbio.html  ibeis.dev.html  ibeis.gui.html  ibeis.html  ibeis.io.html  (+46 more)
.dependabot/: config.yml
.dockerfiles/: docker-compose.env  docker-entrypoint.sh  init-db.sh
.github/: dependabot.yml
_broken/: MainSkel.ui  OLD_README_DEBUGS.md  SQLDatabaseControl.py  Skeleton.py  _depnamescore.py  _dscvs_normer.py  _grave_dev.py  _grave_expt_drawing.py  _grave_graph.py  _grave_template.py  _inspect_gui_grave.py  _old_graph_iden.py  _old_ibsfuncs.py  _old_printres.py  _old_smk_v1.py  _old_vsone_pipeline.py  _smk_index_withpandas.py  _smkgrave.py  _smkindexpandas2.py  _vtool_grave.py  abstract_tables.py  broken_qreq.py  controllerwinerrmsg.txt  depricated_ibsfuncs_3_19_2015.py  dev_port.py  experiments.sh  export_wb.py  frontend_helpers.py  guifront.py  hots_query_result.py  hsgrave3-5-2015.py  interact_bbox.py  interact_matches.py  interact_qres2.py  luigi_backend.py  make_big_database.py  manual_dependant_funcs.py  old_chip_stuff.py  old_control_inject.py  old_export.py  (+56 more)
_dev/: dev.py  main.py  reset_dbs.py  super_setup.py  super_setup_old.py  update_wbia2_tooling.sh
_doc/: conf.py  ibeis.algo.rst  ibeis.algo.smk.rst  ibeis.algo.verif.torch.rst  index.rst  wbia.algo.detect.nms.rst  wbia.algo.detect.rst  wbia.algo.graph.tests.rst  wbia.control.rst  wbia.expt.rst  wbia.scripts.rst  wbia.web.futures_utils.rst  wbia.web.rst
_docs/: FINISHED.txt  TODO.txt  conf.py  guide-2-25-2015.txt  index.rst  wbia.algo.detect.rst  wbia.algo.graph.rst  wbia.algo.graph.tests.rst  wbia.algo.verif.rst  wbia.dbio.rst  wbia.detecttools.directory.rst  wbia.detecttools.pascaldata.rst  wbia.dtool.rst  wbia.plottool.tests.rst  wbia.viz.interact.rst  wbia.web.futures_utils.rst
_frontend/: resources_MainSkel.qrc
_installers/: AddChipsChoiceDialog.py  AddChipsChoiceDialog.ui  ChangeNameDialog.py  ChangeNameDialog.ui  ChoiceDialog.py  ChoiceDialog.ui  ChooseNameDialog.py  ChooseNameDialog.ui  EditPrefSkel.py  EditPrefSkel.ui  ImportImagesChoice.py  ImportImagesChoice.ui  Info.plist  MainDialog.py  MainDialog.ui  MainSkel.py  MainSkel.ui  OpenDatabaseDialog.py  OpenDatabaseDialog.ui  Troubleshooting.py  Troubleshooting.ui  hsicon.icns  ibeis_pyinstaller_data_helper.py  mac_dmg_builder.sh  old_insaller_script_parts.py  pyinstaller-ibeis.spec  rthook_pyqt4.py  win_installer_script.iss
_modules/: ibeis.html  index.html
_page/: contents.html  genindex.html  ibeis.algo.detect.background.html  ibeis.algo.detect.classifier.html  ibeis.algo.detect.html  ibeis.algo.detect.labeler.html  ibeis.algo.detect.nms.html  ibeis.algo.detect.orientation.html  ibeis.algo.graph.html  ibeis.algo.graph.tests.html  ibeis.algo.hots.html  ibeis.algo.hots.smk.html  ibeis.algo.html  ibeis.algo.preproc.html  ibeis.algo.smk.html  ibeis.algo.verif.html  ibeis.algo.verif.torch.html  ibeis.control.html  ibeis.dbio.html  ibeis.dev.html  ibeis.experiments.html  ibeis.expt.html  ibeis.gui.html  ibeis.html  ibeis.init.html  ibeis.io.html  ibeis.model.detect.html  ibeis.model.hots.html  ibeis.model.hots.smk.html  ibeis.model.html  ibeis.model.preproc.html  ibeis.other.html  ibeis.scripts.html  ibeis.templates.html  ibeis.tests.html  ibeis.viz.html  ibeis.viz.interact.html  ibeis.web.futures_utils.html  ibeis.web.html  index.html  (+4 more)
_scripts/: assert_modules.py  bootstrap.py  bootstrap.sh  centos_installation.sh  fix_common_issues.py  fix_server_permissions.sh  fix_shebangs.sh  ibeis  installers.py  mac_dmg_builder.sh  main.py  overnight.sh  pip_install_tpl.sh  profiler_cleaner.py  rsync_ibeisdb.py  setup_special_sklearn.py  style_checks.sh  util_cplat_packages.py  win32bootstrap.py
_sources/: ibeis.control.txt  ibeis.model.hots.smk.txt  ibeis.model.hots.txt  ibeis.model.preproc.txt  ibeis.model.txt  ibeis.tests.txt  ibeis.txt  ibeis.viz.interact.txt  ibeis.viz.txt  index.txt
ibeis/vtool/src/cpp/: CMakeLists.txt
ibeis/vtool/src/cpp/sver/: config.h  config.h.in  sver.cpp
ibeis/vtool/src/cpp/vtool/: config.h  config.h.in
wbia/guitool/: CMakeLists.txt  PrefWidget2.py  PreferenceWidget.py  __init__.py  _api_tree_node_cython.pyx  _guitool_tables_grave.txt  api_button_delegate.py  api_item_model.py  api_item_view.py  api_item_widget.py  api_table_view.py  api_thumb_delegate.py  api_timestamp_delegate.py  api_tree_node.py  api_tree_view.py  filter_proxy_model.py  guitool_components.py  guitool_decorators.py  guitool_delegates.py  guitool_dialogs.py  guitool_main.py  guitool_misc.py  guitool_tables.py  mpl_embed.py  mpl_widget.py  qt_enums.py  qtype.py  stripe_proxy_model.py
wbia/guitool/__PYQT__/: QtCore.py  QtGui.py  QtTest.py  QtWidgets.py  __init__.py  _internal.py
wbia/guitool/tests/: test_treenode.py
(+3514 files in other folders)
